# Reconal

./: .gitignore  README.md  README_WINDOWS.md  build_macos.sh  build_windows.bat  dir.txt  pyproject.toml  reconal_app.py  reconal_cli.py  reconal_web.py
.github/workflows/: build.yml
docs/: build_linux.md  build_macos.md
scripts/: build_linux.sh  build_macos.sh  build_windows.bat
src/reconal/: __init__.py  app.py
src/reconal/gui/: index.html
